--- a/css.css
+++ b/css.css
@@ -1,14 +1,14 @@
 .column-text {
     font-family: "Times New Roman";
     font-size: 16px;
-    height: 18rem;
+    height: 22rem;
     width: 100%;
     line-height: 22px;
     overflow: hidden;
 }
 
 .column-text p {
-    margin: 0 0 25px 0;
+    margin: 0 0 23px 0;
 }
 
 .column-text-wrap {
@@ -18,15 +18,11 @@
     padding-right: 3.2%;
 }
 
-.column-text-wrap-1,
-.column-text-wrap-2 {
+.column-text-helper {
     padding-right: 10%;
     width: 100%;
     box-sizing: border-box;
     position: absolute;
     right: -100%;
-    top: -18rem;
-}
-
-.column-text-wrap-2 {
+    top: -22rem;
 }
